# skill-score

./: .gitignore  README.md  pyproject.toml
skill-score/: app.py
skill-score/.streamlit/: config.toml  pages.toml  secrets.toml
skill-score/db/: config.yaml  create_db.py  general_tables.py
skill-score/pages/: utils.py
skill-score/pages/auth/: components.py  config.yaml  login.py  register.py  registration_end.py  registration_student.py  registration_teacher.py
skill-score/pages/home/: account.py  home.py  load_task.py
skill-score/pages/home/components/: configure.py  load_task.py  task.py
skill-score/pages/intro/: main.py
skill-score/skill_score/: app.py  constants.py  page.py  styles.py  test.py  utils.py
